--- a/01_DeadRare/index.html
+++ b/01_DeadRare/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid 01 - DeadRare</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>01_DeadRare</title>
 </head>
 <body>
-    <p>Content here to add</p>
+    <div class="container">
+        <h2 class="heading">🔥 Hot Collections</h2>
+        <div class="card__grid">
+            <div class="card">
+                <img src="img/Drifters.png" alt="drifter" class="card__img"/>
+                <div class="card__content">
+                    <h3 class="card__title">Drifter</h3>
+                    <p class="card__text">To unite and empower disrupters in building a better reality.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/ElrondApes.png" alt="drifter" class="card__img"/>
+                <div class="card__content">
+                    <h3 class="card__title">Elrond Apes</h3>
+                    <p class="card__text">ElrondApes is a collection of 10,000 unique 3D APEs living on the Elrond Blockchain.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/Gnogen.png" alt="drifter" class="card__img"/>
+                <div class="card__content">
+                    <h3 class="card__title">Gnogons</h3>
+                    <p class="card__text">10k generative profile pic collection.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/MaiarPunks.png" alt="drifter" class="card__img"/>
+                <div class="card__content">
+                    <h3 class="card__title">MaiarPunks</h3>
+                    <p class="card__text">The earth and its inhabitants, humanity, the children of the Andurin, have become corrupted by the power of the Chaldur.</p>
+                </div>
+            </div>
+        </div>
+    </div> 
 </body>
 </html>
